feat(rooms): implement file uploads and full room editing

--- a/src/main/webapp/admin_dashboard.html
+++ b/src/main/webapp/admin_dashboard.html
@@ -20,55 +20,29 @@
 
     /* Header */
     .header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin-bottom: 30px;
-      border-bottom: 1px solid rgba(255,255,255,0.2);
-      padding-bottom: 15px;
+      display: flex; justify-content: space-between; align-items: center;
+      margin-bottom: 30px; border-bottom: 1px solid rgba(255,255,255,0.2); padding-bottom: 15px;
     }
 
     .header h2 { font-weight: 500; letter-spacing: 1px; }
 
     .logout {
-      background: #e74c3c;
-      padding: 8px 18px;
-      border-radius: 8px;
-      text-decoration: none;
-      color: white;
-      font-weight: 600;
-      transition: 0.3s;
-      box-shadow: 0 4px 15px rgba(231, 76, 60, 0.4);
+      background: #e74c3c; padding: 8px 18px; border-radius: 8px; text-decoration: none;
+      color: white; font-weight: 600; transition: 0.3s; box-shadow: 0 4px 15px rgba(231, 76, 60, 0.4);
     }
 
     .logout:hover { background: #c0392b; transform: translateY(-2px); }
 
     /* Tabs */
-    .nav-tabs {
-      display: flex;
-      gap: 15px;
-      margin-bottom: 30px;
-      flex-wrap: wrap;
-    }
-
+    .nav-tabs { display: flex; gap: 15px; margin-bottom: 30px; flex-wrap: wrap; }
     .tab-btn {
-      background: rgba(255,255,255,0.08);
-      border: 1px solid rgba(255,255,255,0.2);
-      padding: 10px 25px;
-      border-radius: 30px;
-      cursor: pointer;
-      color: rgba(255,255,255,0.7);
-      font-weight: 600;
-      transition: 0.3s;
+      background: rgba(255,255,255,0.08); border: 1px solid rgba(255,255,255,0.2);
+      padding: 10px 25px; border-radius: 30px; cursor: pointer; color: rgba(255,255,255,0.7);
+      font-weight: 600; transition: 0.3s;
     }
-
     .tab-btn:hover { background: rgba(255,255,255,0.15); color: white; }
-
     .tab-btn.active {
-      background: #3498db;
-      color: white;
-      border-color: #3498db;
-      box-shadow: 0 4px 15px rgba(52, 152, 219, 0.4);
+      background: #3498db; color: white; border-color: #3498db; box-shadow: 0 4px 15px rgba(52, 152, 219, 0.4);
     }
 
     .section { display: none; }
@@ -82,26 +56,16 @@
     .col-right { flex: 1; min-width: 250px; }
 
     .card {
-      backdrop-filter: blur(16px) saturate(180%);
-      -webkit-backdrop-filter: blur(16px) saturate(180%);
-      background: rgba(255, 255, 255, 0.05);
-      border: 1px solid rgba(255, 255, 255, 0.1);
-      padding: 25px;
-      border-radius: 16px;
-      margin-bottom: 25px;
-      transition: 0.3s;
+      backdrop-filter: blur(16px) saturate(180%); -webkit-backdrop-filter: blur(16px) saturate(180%);
+      background: rgba(255, 255, 255, 0.05); border: 1px solid rgba(255, 255, 255, 0.1);
+      padding: 25px; border-radius: 16px; margin-bottom: 25px; transition: 0.3s;
       box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.3);
     }
-
     .card:hover { transform: translateY(-5px); border-color: rgba(255,255,255,0.3); }
 
     .card h3 {
-      margin-bottom: 15px;
-      font-weight: 400;
-      color: #bdc3c7;
-      font-size: 1.1em;
-      text-transform: uppercase;
-      letter-spacing: 1px;
+      margin-bottom: 15px; font-weight: 400; color: #bdc3c7; font-size: 1.1em;
+      text-transform: uppercase; letter-spacing: 1px;
     }
 
     .chart-box { height: 250px; }
@@ -113,15 +77,22 @@
     tr:last-child td { border-bottom: none; }
     tr:hover td { background: rgba(255,255,255,0.05); }
 
+    .room-img { width: 50px; height: 50px; object-fit: cover; border-radius: 6px; }
+
     /* Buttons */
-    .btn-inv, .btn-del, .btn-add {
+    .btn-inv, .btn-del, .btn-add, .btn-edit {
       border:none; padding:6px 12px; border-radius:6px; cursor:pointer;
       font-weight:600; transition:0.3s; color:white; font-size:12px;
     }
     .btn-inv { background: linear-gradient(135deg, #3498db, #2980b9); }
     .btn-inv:hover { box-shadow: 0 0 10px rgba(52, 152, 219, 0.5); }
+
     .btn-del { background: linear-gradient(135deg, #e74c3c, #c0392b); }
     .btn-del:hover { box-shadow: 0 0 10px rgba(231, 76, 60, 0.5); }
+
+    .btn-edit { background: linear-gradient(135deg, #f39c12, #d35400); }
+    .btn-edit:hover { box-shadow: 0 0 10px rgba(243, 156, 18, 0.5); }
+
     .btn-add { background: linear-gradient(135deg, #27ae60, #2ecc71); width:100%; padding:12px; font-size:14px; margin-top:10px; }
     .btn-add:hover { box-shadow: 0 0 15px rgba(46, 204, 113, 0.4); }
 
@@ -131,14 +102,25 @@
     .role-RECEPTIONIST { background: rgba(46,204,113,0.2); color:#2ecc71; border:1px solid #2ecc71; }
 
     /* Inputs */
-    input, select {
+    input, select, textarea {
       width:100%; padding:12px; margin-bottom:15px;
       border-radius:8px; border:1px solid rgba(255,255,255,0.2);
       background: rgba(0,0,0,0.2); color:white; outline:none; font-size:14px;
     }
-    input:focus, select:focus { border-color: #3498db; background: rgba(0,0,0,0.4); }
+    input:focus, select:focus, textarea:focus { border-color: #3498db; background: rgba(0,0,0,0.4); }
     option { background: #2c3e50; color:white; }
     label { font-size:12px; color: rgba(255,255,255,0.6); margin-bottom:5px; display:block; }
+
+    /* Modal */
+    .modal {
+      display:none; position:fixed; top:0; left:0; width:100%; height:100%;
+      background:rgba(0,0,0,0.8); z-index:1000; align-items:center; justify-content:center;
+    }
+    .modal-content {
+      background: linear-gradient(135deg, #1f303e, #2c3e50); padding:30px;
+      border-radius:12px; width:450px; border: 1px solid rgba(255,255,255,0.1);
+      box-shadow: 0 15px 35px rgba(0,0,0,0.5);
+    }
 
     @media(max-width:900px){
       body { padding:20px; }
@@ -158,6 +140,7 @@
   <div class="nav-tabs">
     <button class="tab-btn active" onclick="switchTab('analytics')">Analytics & Invoices</button>
     <button class="tab-btn" onclick="switchTab('users')">User Management</button>
+    <button class="tab-btn" onclick="switchTab('rooms')">Room Management</button>
   </div>
 
   <div id="analytics" class="section active">
@@ -189,15 +172,12 @@
           <form onsubmit="addExpense(event)">
             <label>Category</label>
             <select id="exCat">
-              <option>Utilities</option>
-              <option>Salaries</option>
-              <option>Maintenance</option>
-              <option>Marketing</option>
-              <option>Other</option>
+              <option>Utilities</option><option>Salaries</option>
+              <option>Maintenance</option><option>Marketing</option><option>Other</option>
             </select>
             <label>Amount ($)</label>
             <input type="number" id="exAmount" step="0.01" required placeholder="0.00">
-            <button type="submit" class="btn-del" style="width:100%; margin-top:10px;">Record Expense</button>
+            <button type="submit" class="btn-del" style="width:100%; margin-top:10px; padding:12px;">Record Expense</button>
           </form>
         </div>
 
@@ -233,11 +213,64 @@
       </div>
     </div>
   </div>
+
+  <div id="rooms" class="section">
+    <div class="dashboard-grid">
+      <div class="col-right">
+        <div class="card" style="border-top: 4px solid #f1c40f;">
+          <h3>Add New Room</h3>
+          <form id="addRoomForm" onsubmit="addRoom(event)">
+            <label>Room Number</label><input type="text" id="rNum" required placeholder="e.g. 101">
+            <label>Type</label>
+            <select id="rType"><option>Single</option><option>Double</option><option>Suite</option></select>
+            <label>Price Per Night ($)</label><input type="number" id="rPrice" step="0.01" required placeholder="0.00">
+            <label>Upload PC Image (Optional)</label><input type="file" id="rImg" accept="image/*">
+            <label>Description</label><textarea id="rDesc" rows="3" placeholder="Room details..."></textarea>
+            <button type="submit" class="btn-add">Add Room</button>
+          </form>
+        </div>
+      </div>
+      <div class="col-left">
+        <div class="card">
+          <h3>Manage Rooms</h3>
+          <table>
+            <thead><tr><th>Pic</th><th>Room #</th><th>Type</th><th>Price</th><th>Action</th></tr></thead>
+            <tbody id="roomBody"><tr><td colspan="5">Loading rooms...</td></tr></tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<div id="editModal" class="modal">
+  <div class="modal-content">
+    <h3 style="margin-bottom:20px; color: white;">Edit Room Details</h3>
+    <form id="editRoomForm" onsubmit="submitEditRoom(event)">
+      <input type="hidden" id="editId">
+      <label>Room Number</label><input type="text" id="editNum" required>
+      <label>Type</label>
+      <select id="editType"><option>Single</option><option>Double</option><option>Suite</option></select>
+      <label>Price ($)</label><input type="number" id="editPrice" step="0.01" required>
+      <label>Change Picture (Leave empty to keep old)</label><input type="file" id="editImg" accept="image/*">
+      <label>Description</label><textarea id="editDesc" rows="3"></textarea>
+
+      <div style="display:flex; gap:10px; margin-top: 15px;">
+        <button type="submit" class="btn-add" style="margin-top:0;">Save Changes</button>
+        <button type="button" class="btn-del" style="width:100%;" onclick="closeModal()">Cancel</button>
+      </div>
+    </form>
+  </div>
 </div>
 
 <script>
+  let allRoomsData = [];
+
   google.charts.load('current', {'packages':['corechart']});
   google.charts.setOnLoadCallback(loadAnalytics);
+
+  // Load tables on startup
   loadUsers();
 
   function switchTab(tabId) {
@@ -245,8 +278,12 @@
     document.querySelectorAll('.tab-btn').forEach(el => el.classList.remove('active'));
     document.getElementById(tabId).classList.add('active');
     event.currentTarget.classList.add('active');
+
+    // Lazy load rooms only when tab is clicked
+    if(tabId === 'rooms') loadAdminRooms();
   }
 
+  // --- 1. ANALYTICS ---
   async function loadAnalytics() {
     try {
       const res = await fetch('adminData');
@@ -295,7 +332,8 @@
     } catch(e){ console.error("Analytics Error:",e); }
   }
 
-  async function addExpense(e){ e.preventDefault();
+  async function addExpense(e){
+    e.preventDefault();
     const params=new URLSearchParams();
     params.append('category',document.getElementById('exCat').value);
     params.append('amount',document.getElementById('exAmount').value);
@@ -307,6 +345,7 @@
     }catch(e){ alert("Server Error"); }
   }
 
+  // --- 2. USERS ---
   async function loadUsers() {
     const tbody=document.getElementById('userBody'); tbody.innerHTML='';
     try{
@@ -333,7 +372,7 @@
     try{
       const res=await fetch('register',{method:'POST',body:params});
       const json=await res.json();
-      if(json.status==='success'){ alert("User Created"); loadUsers(); }
+      if(json.status==='success'){ alert("User Created! Password sent to email."); document.getElementById('uName').value=""; document.getElementById('uEmail').value=""; loadUsers(); }
       else alert("Error: "+json.message);
     }catch(e){ alert("Server Error"); }
   }
@@ -348,6 +387,96 @@
     const total=price;
     const url=`print_receipt.html?id=${id}&name=${encodeURIComponent(name)}&room=${encodeURIComponent(room)}&in=${inDate}&out=${outDate}&price=${price}&total=${total}`;
     window.open(url,'_blank');
+  }
+
+  // --- 3. ROOM MANAGEMENT ---
+  async function loadAdminRooms() {
+    const tbody = document.getElementById('roomBody');
+    try {
+      const res = await fetch('roomManagement');
+      allRoomsData = await res.json();
+      tbody.innerHTML = '';
+      allRoomsData.forEach(r => {
+        tbody.innerHTML += `<tr>
+          <td><img src="${r.image}" class="room-img" onerror="this.src='images/icon1.png'"></td>
+          <td><strong>${r.number}</strong></td>
+          <td>${r.type}</td>
+          <td>$${r.price.toFixed(2)}</td>
+          <td><button class="btn-edit" onclick="openEditModal(${r.id})">Edit</button></td>
+        </tr>`;
+      });
+    } catch(e) { tbody.innerHTML='<tr><td colspan="5">Error loading rooms</td></tr>'; }
+  }
+
+  async function addRoom(e) {
+    e.preventDefault();
+    const formData = new FormData();
+    formData.append('action', 'add');
+    formData.append('number', document.getElementById('rNum').value);
+    formData.append('type', document.getElementById('rType').value);
+    formData.append('price', document.getElementById('rPrice').value);
+    formData.append('description', document.getElementById('rDesc').value);
+
+    // Attach the file
+    const fileInput = document.getElementById('rImg');
+    if(fileInput.files.length > 0) {
+      formData.append('image', fileInput.files[0]);
+    }
+
+    try {
+      const res = await fetch('roomManagement', { method: 'POST', body: formData });
+      const json = await res.json();
+      if(json.status === 'success') {
+        alert("Room added successfully!");
+        document.getElementById('addRoomForm').reset();
+        loadAdminRooms();
+      } else alert("Error adding room");
+    } catch(e) { alert("Server Error"); }
+  }
+
+  // Edit Modal Functions
+  function openEditModal(id) {
+    const room = allRoomsData.find(r => r.id === id);
+    if(!room) return;
+
+    document.getElementById('editId').value = room.id;
+    document.getElementById('editNum').value = room.number;
+    document.getElementById('editType').value = room.type;
+    document.getElementById('editPrice').value = room.price;
+    document.getElementById('editDesc').value = room.description;
+    document.getElementById('editImg').value = ""; // Clear file input
+
+    document.getElementById('editModal').style.display = 'flex';
+  }
+
+  function closeModal() {
+    document.getElementById('editModal').style.display = 'none';
+  }
+
+  async function submitEditRoom(e) {
+    e.preventDefault();
+    const formData = new FormData();
+    formData.append('action', 'edit');
+    formData.append('id', document.getElementById('editId').value);
+    formData.append('number', document.getElementById('editNum').value);
+    formData.append('type', document.getElementById('editType').value);
+    formData.append('price', document.getElementById('editPrice').value);
+    formData.append('description', document.getElementById('editDesc').value);
+
+    const fileInput = document.getElementById('editImg');
+    if(fileInput.files.length > 0) {
+      formData.append('image', fileInput.files[0]);
+    }
+
+    try {
+      const res = await fetch('roomManagement', { method: 'POST', body: formData });
+      const json = await res.json();
+      if(json.status === 'success') {
+        alert("Room updated successfully!");
+        closeModal();
+        loadAdminRooms();
+      } else alert("Error updating room");
+    } catch(e) { alert("Server Error"); }
   }
 
   async function logout(){ await fetch('logout'); window.location.href='login_app.html'; }
